# AdaptableTransgator

./: .gitignore  CMakeLists.txt  README.md  translate_word.py
data/: dictionary.csv
src/: HashMap.cpp  HashMap.h  Trie.cpp  Trie.h  dictionary.cpp  dictionary.h  main.cpp  sfmlhelpers.cpp  sfmlhelpers.h
